k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: expensy
spec:
  type: ClusterIP
  ports:
    - port: 8706
      targetPort: 8706
  selector:
    app: backend
