k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: expensy
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
